# protodb

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  scheme.xml  script.lua
app/: CMakeLists.txt
app/include/protodb/: LogFormatter.h  LogModel.h  LogProxyModel.h  PluginManager.h  PluginManagerNew.h
app/include/protodb/app/: LuaApi.h
app/include/protodb/gui/: LogDecorationDialog.h  SerialIOWidget.h
app/src/: Configurable.cpp  FactoryAbstract.cpp  IOWidgetFactory.cpp  LogDecorator.cpp  LogFormatter.cpp  PluginManager.cpp  PluginManagerNew.cpp  SequenceModel.cpp  crc_logic.cpp
app/src/app/: LogFormatter.cpp  LogModel.cpp  LuaApi.cpp  main.cpp
app/src/gui/: CellSpinBoxDelegate.cpp  LogDecorationDialog.cpp  LogItemDelegate.cpp  SequenceEditDialog.cpp  SequenceTableView.cpp
apps/protodb/: CMakeLists.txt  ProtodbVersion.h.in
apps/protodb/include/: Assistant.h  BytecodeCharsEncoder.h  BytecodeCharsEncoderCreator.h  BytecodeCopyAsDialog.h  BytecodeEditor.h  BytecodeSourceCodeEncoder.h  BytecodeSourceCodeEncoderCreator.h  BytecodeValuesEncoder.h  BytecodeValuesEncoderCreator.h  CellButtonDelegate.h  CellCheckBoxDelegate.h  CellSpinBoxDelegate.h  ConnectionConfigDialog.h  CrcCalculator.h  Delimeter.h  DelimetersConfigWidget.h  FilteredComboBox.h  LogDecorationDialog.h  LogDecorator.h  LogFormatWidget.h  LogFormatter.h  LogItemDelegate.h  LogPrinter.h  LogProxyModel.h  LogTableView.h  LogWidget.h  Logger.h  MainClass.h  PluginDetailDialog.h  PluginManagerDialog.h  PluginTreeView.h  ProtodbConfigDialog.h  ProtodbConfigStorage.h  ProtodbSessionManager.h  ScriptInterfaceGroup.h  SeanseConfigDialog.h  Sequence.h  SequenceEditDialog.h  SequenceEditor.h  SequenceFormatSelectionWidget.h  (+9 more)
apps/protodb/resources/: protodb.rc
apps/protodb/src/: Assistant.cpp  BytecodeCharsEncoder.cpp  BytecodeCopyAsDialog.cpp  BytecodeEditor.cpp  BytecodeSourceCodeEncoder.cpp  BytecodeValuesEncoder.cpp  CellButtonDelegate.cpp  CellCheckBoxDelegate.cpp  CellSpinBoxDelegate.cpp  ConnectionConfigDialog.cpp  CrcCalculator.cpp  Delimeter.cpp  DelimetersConfigWidget.cpp  FilteredComboBox.cpp  LogDecorationDialog.cpp  LogDecorator.cpp  LogFormatWidget.cpp  LogFormatter.cpp  LogItemDelegate.cpp  LogPrinter.cpp  LogProxyModel.cpp  LogStyleConfigWidget.cpp  LogTableView.cpp  LogWidget.cpp  Logger.cpp  MainClass.cpp  PluginDetailDialog.cpp  PluginManagerDialog.cpp  PluginTreeView.cpp  ProtodbConfigDialog.cpp  ProtodbConfigStorage.cpp  ProtodbSessionManager.cpp  ScriptInterfaceGroup.cpp  SeanseConfigDialog.cpp  Sequence.cpp  SequenceEditDialog.cpp  SequenceEditor.cpp  SequenceFormatSelectionWidget.cpp  SequenceModel.cpp  SequenceScriptFormatter.cpp  (+7 more)
cmake/: CMakeLists.txt  okteta.CMakeLists.txt  qt_ads.CMakeLists.txt
common/: CMakeLists.txt
common/include/protodb/: Logger.h  SequenceModel.h  Worker.h
common/include/protodb/configurable/: Configurable.h
common/include/protodb/shared_types/: LogDecorator.h  LogFormatter.h
common/include/protodb/utils/: JsonUtils.h
common/src/: JsonUtils.cpp  LogModel.cpp  Logger.cpp  LuaApi.cpp  PluginManager.cpp  SequenceModel.cpp  SolByteArrayWrapper.cpp  Worker.cpp
documentation/: CMakeLists.txt  protodb.qhcp  protodb.qhp
documentation/content/: about.txt  crc_calculator.html  delimeters.html  index.html  intro.html  log.html  mainwindow.html  options.html  plugins.html  scripting.html  scripting_lua.html  seance.html  seance_config.html  session.html  tables.html
gui/: CMakeLists.txt
gui/include/: CellSpinBoxDelegate.h
gui/include/protodb/: ConnectionConfigDialog.h  LogFormatWidget.h  LogItemDelegate.h  LogProxyModel.h  LogTableView.h  LogWidget.h  PluginDetailDialog.h  PluginManagerDialog.h  PluginTreeView.h  mainwindow.h
gui/src/: CellButtonDelegate.cpp  CellCheckBoxDelegate.cpp  CellSpinBoxDelegate.cpp  ConnectionConfigDialog.cpp  LogDecorationDialog.cpp  LogFormatWidget.cpp  LogItemDelegate.cpp  LogProxyModel.cpp  LogStyleConfigWidget.cpp  LogTableView.cpp  LogWidget.cpp  PluginDetailDialog.cpp  PluginManagerDialog.cpp  PluginTreeView.cpp  SequenceEditDialog.cpp  SequenceTableView.cpp  SequenceTableWidget.cpp  main.cpp  mainwindow.cpp  menu.cpp  tool_bar.cpp
libs/base/: CMakeLists.txt
libs/base/include/protodb/: Logger.h  LuaApi.h  SequenceModel.h  SessionManager.h  Worker.h
libs/base/src/: ConfigAggregator.cpp  Configurable.cpp  FactoryAbstract.cpp  GlobalFactoryStorage.cpp  IODeviceFactory.cpp  JsonBaseUtils.cpp  Logger.cpp  LuaApi.cpp  PluginManager.cpp  SequenceModel.cpp  SessionManager.cpp  SolByteArrayWrapper.cpp  Worker.cpp  crc_logic.cpp  ziputils.cpp
libs/dev/: CMakeLists.txt
libs/dev/include/protodb/: Connection.h  (+7 more)
libs/dev/src/: BytecodeEncoderFactory.cpp  ConnectionFactory.cpp  IODeviceFactory.cpp  IOWidgetFactory.cpp  ScriptInterfaceFactory.cpp  Seance.cpp
libs/gui/: CMakeLists.txt
libs/gui/resources/: gui_resources.qrc  resources.qrc
libs/gui/src/: IOWidgetFactory.cpp  JsonUtils.cpp  MetaTypeUtils.cpp  PluginManagerDialog.cpp  PluginTreeView.cpp  SessionCreateDialog.cpp  SessionManager.cpp  SessionManagerGui.cpp  SessionManagerWidget.cpp  SpoilerWidget.cpp
libs/sol/: CMakeLists.txt  LICENSE.txt
plugins/IODevice/: CMakeLists.txt  IODeviceCreatorInterface.h  IODeviceFactory.cpp  IODeviceFactory.h
plugins/IODevice/plugins/: CMakeLists.txt
plugins/IOWidget/: CMakeLists.txt  IOWidget.h  IOWidgetCreatorInterface.h  IOWidgetFactory.cpp  IOWidgetFactory.h
plugins/IOWidget/plugins/: CMakeLists.txt
plugins/NetIOWidget/: CMakeLists.txt
plugins/NetIOWidget/include/: NetIOWidget.h  NetIOWidgetCreator.h  NetIOWidgetPluginMetadata.json
plugins/NetIOWidget/src/: NetIOWidget.cpp  NetIOWidgetCreator.cpp
plugins/SerialIODevice/: CMakeLists.txt  SerialIODevicePluginMetadata.json
plugins/SerialIODevice/include/: SerialIODeviceCreator.h
plugins/SerialIODevice/src/: SerialIODeviceCreator.cpp  SerialIoSeance.cpp
plugins/SerialIOWidget/: CMakeLists.txt
plugins/SerialIOWidget/include/: SerialIOWidget.h  SerialIOWidgetCreator.h
plugins/SerialIOWidget/src/: SerialIOWidget.cpp  SerialIOWidgetCreator.cpp
(+268 files in other folders)
